--- a/views/index.pug
+++ b/views/index.pug
@@ -24,11 +24,11 @@ block content
     .container.h-100
       .row.h-100.align-items-center.justify-content-center.text-center
         .col-lg-10.align-self-end
-          h1.text-uppercase.text-white.font-weight-bold Your Favorite Source of Free Bootstrap Themes
+          h1.text-uppercase.text-white.font-weight-bold Bicycles Network
           hr.divider.my-4
         .col-lg-8.align-self-baseline
           p.text-white-75.font-weight-light.mb-5
-            | Start Bootstrap can help you build better websites using the Bootstrap framework! Just download a theme and start customizing, no strings attached!
+            | The first urban cyclist online community!
           a.btn.btn-primary.btn-xl.js-scroll-trigger(href='#about') Find Out More
   // About section
   section#about.page-section.bg-primary
