Creation of bicycle's API and CRUD finalization

--- a/views/bicycles/index.pug
+++ b/views/bicycles/index.pug
@@ -3,6 +3,8 @@ extends ../layout
 block content
     a(href='/bicycles/create') New Bicycle
     br
+    a(href='/bicycles/read') See detailed Bicycles
+    br
     br
     table.table
         thead
