User's views correction and token's model creation

--- a/views/bicycles/create.pug
+++ b/views/bicycles/create.pug
@@ -13,8 +13,8 @@ block content
     br
 
     form(action="/bicycles/create" method='POST')
-        label(for="id") ID:
-        input#id(type='text' name='id')
+        label(for="code") ID:
+        input#id(type='text' name='code')
         br
         label(for="color") Color:
         input#color(type='text' name='color')
