--- a/views/bicycles/index.pug
+++ b/views/bicycles/index.pug
@@ -18,7 +18,7 @@ block content
         tbody
             each bici in bikes
                 tr
-                    td(scope='row')= bici.id
+                    td(scope='row')= bici.code
                     td= bici.color
                     td= bici.model
                     td= bici.ubication
