--- a/views/bicycles/read.pug
+++ b/views/bicycles/read.pug
@@ -15,7 +15,7 @@ block content
         tbody
             each bike in bikes
                 tr
-                    td= bike.id
+                    td= bike.code
                     td= bike.model
                     td= bike.color
                     td= bike.ubication[0]
