--- a/views/bicycles/update.pug
+++ b/views/bicycles/update.pug
@@ -13,8 +13,8 @@ block content
     br
 
     form(action="/bicycles/"+bike.id+"/update" method='POST')
-        label(for="id") ID:
-        input#id(type='text' name='id' value=bike.id)
+        label(for="code") ID:
+        input#id(type='text' name='code' value=bike.code)
         br
         label(for="color") Color:
         input#color(type='text' name='color' value=bike.color)
