--- a/views/session/resetPassword.pug
+++ b/views/session/resetPassword.pug
@@ -19,7 +19,7 @@ body#LoginForm
           h2 Password change
           p Enter your password
         form#Login(action='/resetPassword' method='POST')
-          input#email(type='hidden' name='email' value= usuario.email)
+          input#email(type='hidden' name='email' value= user.email)
           .form-group
             label(for='pwd') Password: 
             input#pwd.form-control(type='password' name='password' class= errors.password ? 'is-invalid' : '')
