Google OAuth20 test

--- a/views/session/login.pug
+++ b/views/session/login.pug
@@ -26,5 +26,6 @@ body#LoginForm
           .forgot
             a(href='/forgotPassword') Forgot password?
 
+          a(href='/auth/google') Login with Google
 
           button.btn.btn-primary(type='submit') Login
